--- a/resources/svg/icons.html
+++ b/resources/svg/icons.html
@@ -166,8 +166,48 @@
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.7" d="M8 4H4m0 0v4m0-4 5 5m7-5h4m0 0v4m0-4-5 5M8 20H4m0 0v-4m0 4 5-5m7 5h4m0 0v-4m0 4-5-5" />
             </svg>
         </symbol>
+        <symbol id="caret-left-icon" viewBox="0 0 16 16">
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2.75"
+              d="M10 3L4.5 8l5.5 5"
+              fill="none"
+            />
+        </symbol>                  
+        <symbol id="caret-right-icon" viewBox="0 0 16 16">
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2.75"
+              d="M5.5 3l5.5 5-5.5 5"
+              fill="none"
+            />
+        </symbol>   
+          
+        <symbol id="refresh-button" viewBox="0 0 16 16">
+            <!-- Circular arc with a bigger gap -->
+            <path d="M12.4 4a6 6 0 1 0 1.5 4.5" 
+                  stroke="currentColor" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            <!-- Arrowhead -->
+            <path d="M13.4 2v3h-3" 
+                  stroke="currentColor" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </symbol>     
+        <symbol id="copy-icon" viewBox="0 0 24 24" fill="currentColor">
+            <path fill-rule="evenodd" d="M18 3a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-1V9a4 4 0 0 0-4-4h-3a1.99 1.99 0 0 0-1 .267V5a2 2 0 0 1 2-2h7Z" clip-rule="evenodd"/>
+            <path fill-rule="evenodd" d="M8 7.054V11H4.2a2 2 0 0 1 .281-.432l2.46-2.87A2 2 0 0 1 8 7.054ZM10 7v4a2 2 0 0 1-2 2H4v6a2 2 0 0 0 2 2h7a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-3Z" clip-rule="evenodd"/>
+        </symbol>
     </defs>
 </svg>
+
+<svg id="copy-icon-template" viewBox="0 0 24 24" fill="currentColor" style="display: none">
+    <g>
+      <path fill-rule="evenodd" d="M18 3a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-1V9a4 4 0 0 0-4-4h-3a1.99 1.99 0 0 0-1 .267V5a2 2 0 0 1 2-2h7Z" clip-rule="evenodd"/>
+      <path fill-rule="evenodd" d="M8 7.054V11H4.2a2 2 0 0 1 .281-.432l2.46-2.87A2 2 0 0 1 8 7.054ZM10 7v4a2 2 0 0 1-2 2H4v6a2 2 0 0 0 2 2h7a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-3Z" clip-rule="evenodd"/>
+    </g>
+  </svg>
 
 <svg id="download-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="display: none;">
     <path d="M7,10 L12,15 L17,10" fill="none" stroke="currentColor" stroke-width="2"></path>
