--- a/resources/html/tabs/fractaltab.html
+++ b/resources/html/tabs/fractaltab.html
@@ -28,11 +28,15 @@
                 </div>
                 <div class="settingsSlider centered" title="Adjust smoothness of fractal lines. Lower to reduce lag" style="margin-bottom: 10px;">
                     <div style="display:flex; justify-content: space-between;">
-                        <div class="number-input-wrapper">
+                        <div class="number-input-wrapper" style="width: 45%">
                             <div id="quality_value">Quality:</div>
                             <input id="quality_value_number" class="number-input" type="number" min="0" max="100" value="16" step="0.1">
                         </div>
-                        <div id="fps">?? fps (Is javascript enabled?)</div>
+                        <div class="number-input-wrapper" style="width: 30%" title="Add idleness to save energy">
+                            <div id="frames_delay_value">Delay:</div>
+                            <input id="frames_delay_value_number" class="number-input" type="number" min="0" max="9" value="0" step="1">
+                        </div>
+                        <div id="fps" style="text-align: right; width: 20%">?? fps (Is javascript enabled?)</div>
                     </div>
                     <input id="quality" type="range" min="0" max="100" value="16">
                 </div>
