Introduce class Settings - Load/save settings from/to local storage - Reset settings - Cover only Fractal Controls for now

--- a/resources/html/tabs/helptab.html
+++ b/resources/html/tabs/helptab.html
@@ -16,6 +16,7 @@
         </tr>
         <tr>
             <td>
+                <button id="resetSettings" class="key-button">Reset Settings</button>
                 <button id="clearLocalStorage" class="key-button">Clear Local Storage</button>
             </td>
             <td>
