--- a/loading.html
+++ b/loading.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Logo Animation</title>
+    <title>Neurite</title>
     <style>
         body {
             margin: 0;
