+gpt 4.1 -adjust groq models

--- a/resources/html/tabs/aitab.html
+++ b/resources/html/tabs/aitab.html
@@ -23,6 +23,9 @@
                         <label for="open-ai-select">OpenAi</label>
                         <div class="dropdown-container">
                             <select id="open-ai-select" class="model-selector custom-select">
+                                <option value="gpt-4.1">GPT 4.1</option>
+                                <option value="gpt-4.1-mini">GPT 4.1 mini</option>
+                                <option value="gpt-4.1-nano">GPT 4.1 nano</option>
                                 <option value="gpt-4o">GPT 4o</option>
                                 <option value="gpt-4o-mini">GPT 4o mini</option>
                                 <option value="gpt-4">GPT 4</option>
@@ -48,9 +51,9 @@
                         <div class="dropdown-container">
                             <select id="groq-select" class="model-selector custom-select">
                                 <option value="gemma2-9b-it">Gemma 2 9b</option>
-                                <option value="mixtral-8x7b-32768">Mixtral 8x7b 32k</option>
-                                <option value="mistral-saba-24b">Mistral Saba 24b</option>
-                                <option value="deepseek-r1-distill-llama-70b">Deepseek R1</option>
+                                <option value="deepseek-r1-distill-llama-70b">Deepseek R1 distill Llama 70b</option>
+                                <option value="deepseek-r1-distill-qwen-32b">Deepseek R1 distill Qwen 32b</option>
+                                <option value="meta-llama/llama-4-scout-17b-16e-instruct">Llama 4 Scout 17b</option>
                                 <option value="llama-3.3-70b-versatile">Llama 3.3 70b</option>
                                 <option value="llama-3.1-8b-instant">Llama 3.1 8b</option>
                                 <option value="llama3-70b-8192">Llama 3 70b</option>
