--- a/resources/html/modals.html
+++ b/resources/html/modals.html
@@ -219,7 +219,7 @@
         </div>
         <!-- Radial Branch Depth Slider: For Radial -->
         <div class="settingsSlider radial-slider" title="Sets the starting radius from the center for the first node.">
-            <label for="radialDepthSlider"> of Radii</label>
+            <label for="radialDepthSlider"># of Radii</label>
             <input type="range" id="radialDepthSlider" name="radial-depth-slider" min="1" max="32" step="1">
         </div>
 
