Introduce locations - Refactor displaysavedcoords.js - Minor UI improvements to buttons

--- a/resources/html/tabs/networkstab.html
+++ b/resources/html/tabs/networkstab.html
@@ -24,8 +24,8 @@
     <div class="bottom-section">
         <div id="savedCoordinatesContainerBottom" class="saved-coordinates-container"></div>
         <div class="buttons-right">
-            <a id="saveCoordinatesBtn">Store Coordinates</a>
-            <a id="deleteCoordinatesBtn">Delete Coordinates</a>
+            <a id="btnSaveLocation">Save Location</a>
+            <a id="btnDeleteLocation">Delete Location</a>
         </div>
     </div>
 
